--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>von local </h1> 
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+</head>
+<body>
+<h1>ich schwöre ich liebe linux ja scheiß windows </h1>
+    <button id="createH1Button">klick mich</button>
+
+    <script src="script.js"></script>
+</body>
+</html>
+
